# tap-getcensus

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: constraints.txt  dynamic-publish.yaml  test.yml
tap_getcensus/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
