[tool.poetry]
name = "tap-getcensus"
version = "0.0.1"
description = "`tap-getcensus` is a Singer tap for Census, built with the Meltano SDK for Singer Taps."
authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
keywords = [
  "ELT",
  "singer.io",
  "Census",
]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/edgarrmondragon/tap-getcensus"
repository = "https://github.com/edgarrmondragon/tap-getcensus"
documentation = "https://github.com/edgarrmondragon/tap-getcensus#readme"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
singer-sdk = "0.11.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
mypy = ">=0.950"
pytest = "^7.1.3"
pyupgrade = "^3.0.0"
types-requests = "^2.28.11"

# Flake8
darglint = "^1.8.1"
flake8 = "^5.0.4"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
use_parentheses = true
include_trailing_comma = true
src_paths = "tap_getcensus"
known_first_party = "tap_getcensus"
add_imports = [
  "from __future__ import annotations",
]

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["backoff.*"]

[build-system]
requires = ["poetry-core>=1,<2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
"tap-getcensus" = "tap_getcensus.tap:TapCensus.cli"
