[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core<2,>=1",
]

[tool.poetry]
name = "tap-getcensus"
version = "0.0.1"
description = "Singer tap for the Census Operational Analytics Platform, built with the Meltano SDK for Singer Taps."
license = "Apache-2.0"
authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
maintainers = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/edgarrmondragon/tap-getcensus"
repository = "https://github.com/edgarrmondragon/tap-getcensus"
documentation = "https://github.com/edgarrmondragon/tap-getcensus/#readme"
keywords = [
  "ELT",
  "singer.io",
  "Census",
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = "0.32.0"

[tool.poetry.dev-dependencies]
singer-sdk = { version = "*", extras = ["testing"] }

[tool.poetry.scripts]
# CLI declaration
"tap-getcensus" = "tap_getcensus.tap:TapCensus.cli"

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "DJ",      # flake8-django
    "FIX002",  # line-contains-todo
]
line-length = 88
select = ["ALL"]
unfixable = ["ERA001"]

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["backoff.*"]

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""
metadata = true
style = "pep440"
vcs = "git"
